Editing HTML and CSS files

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img src="./img/logo.jpg" alt="logo">
             </div>
             <div class="flex-left">
-                 <a href="#">Login</a>
+                 <a href="# " class="log">Login</a>
                 <a href="#" class="a">Sign up</a>
             </div>
             
